# pocket_othello

./: .gitignore  LICENSE  MOBILE_BENCHMARK.md  README.md  ai.js  app.js  benchmark.css  benchmark.html  benchmark.js  dqn.css  engine.js  index.html  manifest.webmanifest  online.js  package.json  service-worker.js  style.css
.github/workflows/: ci.yml  pages.yml  train-deploy-dqn.yml
engine/: README.md
engine/codingame/: othello.js
engine/javascript/: dqn-benchmark.js  dqn-client.js  dqn-core.js  dqn-worker.js  evaluation.js  generate_teacher_data.mjs  index.js  search.js
engine/models/: README.md
engine/python/: LOCAL_TRAINING.md  README.md  pyproject.toml
engine/python/dqn/: __init__.py  agent.py  encoding.py  export_onnx.py  imitation.py  model.py  reinforcement.py  replay_buffer.py  self_play.py  symmetry.py  teacher_data.py
engine/python/othello/: __init__.py  heuristic.py  rules.py
engine/python/tests/: create_browser_fixture.py  test_dqn.py  test_imitation.py  test_onnx_export.py  test_reinforcement.py  test_rules.py  test_teacher_data.py
scripts/: prepare-web.mjs
tests/: codingame.test.mjs  dqn_benchmark.test.mjs  dqn_ort_web.test.mjs  dqn_web.test.mjs  engine.test.mjs  export_js_rule_cases.mjs
