[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket-othello-engine"
version = "0.5.0"
description = "Othello rules, compact Dueling Double DQN, imitation, and self-play training"
requires-python = ">=3.10"

[project.optional-dependencies]
dqn = ["torch>=2.0,<3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["othello*", "dqn*"]
