[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pocket-othello-engine"
version = "0.6.0"
description = "Othello Dueling Double DQN training and browser-ready ONNX export"
requires-python = ">=3.10"

[project.optional-dependencies]
dqn = ["torch>=2.0,<3"]
export = ["numpy>=1.26", "onnx>=1.16", "onnxruntime>=1.18"]
all = [
  "torch>=2.0,<3",
  "numpy>=1.26",
  "onnx>=1.16",
  "onnxruntime>=1.18",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["othello*", "dqn*"]
